# btv

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  pendencias.md
.forge/: forge.db-shm  forge.db-wal  prompt_library.db  telemetry.db
.github/workflows/: ci.yml
btv-web/: README.md  index.html  package.json  playwright.config.ts  playwright.integration.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
btv-web/scripts/: ensure-bpmn.mjs  run-integration-server.mjs
btv-web/src/: App.tsx  brand-lint.test.ts
crates/btv-cli/: Cargo.toml
crates/btv-cli/src/: btv_agent.rs  btv_agent_golden.rs  cache.rs  convert.rs  doctor_console.rs  lsp_console.rs  main.rs  mcp_console.rs  memory_console.rs  prompt_render.rs  rate_limit_gen.rs  session.rs  sidecar.rs  skills.rs  squad.rs  squad_agent.rs  tenant_border_sweep.rs  tenant_extractor.rs  tui_app.rs  web_agent.rs
crates/btv-cli/tests/: verify_cli.rs  wire_strings.rs
crates/btv-contract/: Cargo.toml
crates/btv-contract/src/: lib.rs
crates/btv-core/: Cargo.toml
crates/btv-core/benches/: compaction.rs
crates/btv-core/src/: agent.rs  agent_loop.rs  compaction.rs  lib.rs  session.rs
crates/btv-domain/: Cargo.toml
crates/btv-domain/src/: chat.rs  event.rs  ledger_kind.rs  lib.rs  persona.rs  ports.rs  run.rs  tenant.rs  tool.rs  user.rs
crates/btv-golden/: Cargo.toml
crates/btv-llm/: Cargo.toml
crates/btv-llm/benches/: gateway.rs
crates/btv-llm/src/: chat.rs  gateway.rs  lib.rs  model_tier.rs  openai.rs  pricing.rs  provider.rs  rate_limit.rs  scripted.rs
crates/btv-proto/: Cargo.toml  build.rs
crates/btv-schemas/: Cargo.toml
crates/btv-schemas/benches/: canonical.rs
crates/btv-schemas/src/: canonical.rs  experiment.rs  ledger.rs  lib.rs  review.rs  squad_template.rs  workflow.rs
crates/btv-schemas/tests/: parity.rs  schema_fixtures.rs
crates/btv-server/: Cargo.toml
crates/btv-server/src/: btv.rs  doctor_console.rs  guard.rs  lib.rs  lsp_console.rs  sandbox_console.rs
crates/btv-server/src/handlers/: admin.rs  designer.rs  ledger.rs  mod.rs  prompts.rs  providers.rs  telemetria.rs  verify.rs
crates/btv-server/tests/: golden_http.rs
crates/btv-sidecar/: Cargo.toml
crates/btv-sidecar/src/: client.rs  core_server.rs  lib.rs  memory_client.rs  service.rs  squad_client.rs  supervisor.rs
crates/btv-sidecar/tests/: client_over_uds.rs  core_server_inprocess.rs  python_sidecar.rs  squad_e2e.rs
crates/btv-store/: Cargo.toml
crates/btv-store/examples/: seed_btv.rs  seed_ledger.rs  seed_telemetry.rs
crates/btv-store/migrations_pg/: 0001_schema_multitenant.sql  0002_sessions.sql  0003_template_pub.sql  0004_users.sql
crates/btv-store/src/: btv.rs  events.rs  ledger.rs  lib.rs  pg.rs  prompt_cache.rs  rule_store.rs  telemetry.rs
crates/btv-store/tests/: contract_pg.rs  contract_sqlite.rs  migracao_ledger_pre_tenant.rs  migracao_pre_tenant.rs  sessao_durable_replay.rs
crates/btv-tools/: Cargo.toml
crates/btv-tools/src/: bash.rs  diff.rs  grep.rs  lib.rs  lsp.rs  mcp.rs  registry.rs  sandbox.rs  skill.rs
crates/btv-tools/tests/: loop_com_ferramentas_reais.rs  lsp_integration.rs  mcp_integration.rs
crates/btv-tui/: Cargo.toml
crates/btv-verify/: Cargo.toml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: btv_agent.rs  cache.rs  main.rs  session.rs  sidecar.rs  skills.rs  squad.rs  squad_agent.rs  tui_app.rs  web_agent.rs
crates/forge-cli/tests/: verify_cli.rs
crates/forge-core/: Cargo.toml
crates/forge-core/benches/: compaction.rs
crates/forge-core/src/: agent_loop.rs  lib.rs  permission.rs  session.rs
crates/forge-llm/: Cargo.toml
crates/forge-llm/benches/: gateway.rs
crates/forge-llm/src/: anthropic.rs  chat.rs  gateway.rs  lib.rs  model_tier.rs  provider.rs  scripted.rs  sse.rs
crates/forge-proto/: Cargo.toml  build.rs
crates/forge-proto/src/: lib.rs
crates/forge-schemas/: Cargo.toml
crates/forge-server/: Cargo.toml
crates/forge-sidecar/: Cargo.toml
crates/forge-store/: Cargo.toml
crates/forge-store/examples/: seed_btv.rs
crates/forge-store/src/: btv.rs  events.rs  ledger.rs  lib.rs  prompt_cache.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: bash.rs  edit.rs  grep.rs  lib.rs  lsp.rs  read.rs  registry.rs  sandbox.rs
crates/forge-tools/tests/: lsp_integration.rs
crates/forge-tui/: Cargo.toml
crates/forge-verify/: Cargo.toml
crates/forge-verify/src/: config.rs  lib.rs  vetter.rs
docs/: C3-INVENTARIO-STRANGLER.md  DECISOES.md  E1S-ESBOCO.md  MIGRACAO-DDD-ENCERRAMENTO.md  PADROES-DA-CAMPANHA.md  PLANO-FASE-6.md  PLANO-FASE-7-frontend-primario.md  PLANO-PLATAFORMA-FORGE.md  REVIEW-AUDITORIA-COMPLETA.md  REVIEW-QUALIDADE-CODIGO.md  ROADMAP-MELHORIAS.md  pendencias-review-qualidade.md  roadmap-forge.html
docs/adr/: 0001-arquitetura-rust-python-grpc.md  0002-porte-seletivo-da-rust-migration.md  0003-primeira-ativacao-grpc-promptforge.md  0004-lineage-canonica-do-squad-buildtovalue.md  0005-fronteira-de-injecao-dos-agentes.md  0006-planejamento-real-e-hitl-como-portao.md  0007-orquestrador-como-coordenacao-deterministica.md  0009-skill-vetter-manifesto-e-linguagem.md  0011-skills-como-dyn-tool-vetting-e-sandbox.md  0012-politica-de-confianca-mcp.md  0013-embedder-do-rag-lexico-local.md  0014-experiment-v1-ab-testing.md  0022-memory-service-ponte-memoria-do-squad.md  0024-mapa-de-contextos-ddd.md  0025-tenantid-newtype-e-tenantcontext.md  0026-dupla-persistencia-sqlite-postgres-rls.md  0027-hash-chain-do-ledger-por-tenant.md  0028-serializacao-do-append-por-tenant-no-postgres.md  0029-identidade-e-resolucao-de-tenant-na-borda.md  0030-verification-evidence-tipada-no-wire.md  0034-remocao-rpcs-mortos-coreservice.md  (+3 more)
infra/: README.md
python/: pendencias.md  pyproject.toml
python/.forge/squad-memory/: agent_memories.jsonl
scripts/: arch-lint.sh  btv-adversarial.sh  btv-audit-console.js  btv-full-smoke.js  btv-regression.sh  gen_fixtures.py  gen_proto_py.py
skills/: README.md
web/: index.html  playwright.config.ts  playwright.integration.config.ts  vite.config.ts
(+255 files in other folders)
