[workspace]
resolver = "2"
members = [
    "crates/btv-cli",
    "crates/btv-contract",
    "crates/btv-core",
    "crates/btv-domain",
    "crates/btv-golden",
    "crates/btv-llm",
    "crates/btv-proto",
    "crates/btv-schemas",
    "crates/btv-server",
    "crates/btv-sidecar",
    "crates/btv-store",
    "crates/btv-tools",
    "crates/btv-tui",
    "crates/btv-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/danzeroum/mix_btv_code"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
sha2 = "0.10"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync", "net"] }
# B4 (ADR 0026): adapter Postgres do modo SaaS — só entra no build com a
# feature `pg` de btv-store (o desenvolvimento local continua 100% SQLite).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
ignore = "0.4"
grep = "0.3"
time = { version = "0.3", features = ["formatting"] }
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"
protoc-bin-vendored = "3.1"
hyper-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
axum = "0.8"
bollard = "0.17"
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["serde"] }

btv-schemas = { path = "crates/btv-schemas" }
btv-domain = { path = "crates/btv-domain" }
btv-core = { path = "crates/btv-core" }
btv-llm = { path = "crates/btv-llm" }
btv-store = { path = "crates/btv-store" }
btv-tools = { path = "crates/btv-tools" }
btv-verify = { path = "crates/btv-verify" }
btv-tui = { path = "crates/btv-tui" }
btv-proto = { path = "crates/btv-proto" }
btv-sidecar = { path = "crates/btv-sidecar" }
btv-server = { path = "crates/btv-server" }
btv-golden = { path = "crates/btv-golden" }
btv-contract = { path = "crates/btv-contract" }
