[project]
name = "btv-python-workspace"
version = "0.1.0"
description = "Workspace Python da plataforma BuildToValue (sidecar de orquestração)"
requires-python = ">=3.11"
dependencies = [
    "btv-squad",
    "btv-promptforge",
    "btv-review",
    "btv-proto-py",
]

[dependency-groups]
dev = ["pytest>=8", "grpcio-tools>=1.60"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
btv-squad = { workspace = true }
btv-promptforge = { workspace = true }
btv-review = { workspace = true }
btv-proto-py = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]
