[package]
name = "btv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime de sessão da plataforma BuildToValue: contexto, agentes, permissões, loop de agente"

[dependencies]
btv-schemas.workspace = true
btv-llm.workspace = true
btv-store.workspace = true
btv-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "compaction"
harness = false
