[package]
name = "btv-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "API local e dashboard de métricas da plataforma BuildToValue (axum) — Fase 3"

[dependencies]
btv-store.workspace = true
btv-verify.workspace = true
# btv-llm é usado só pelo bin `loadgen` (o alvo do load-test do k6, que embrulha
# o ScriptedGenerator sem key real) — não pela lib do dashboard.
btv-llm.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
# `ServiceExt::oneshot` no fallback esperto da SPA (serve o index.html só para
# rotas não-`/api`; `/api/*` desconhecida vira 404 JSON). Usado na lib, não só
# nos testes — por isso dependência normal.
tower = { workspace = true, features = ["util"] }
# `created_at` dos prompts salvos (Fase 7 Onda 5) — mesma lib/formato que
# `btv-cli`'s `now_rfc3339()` já usa (`session.rs`), só que aqui embutida
# porque btv-server não depende de btv-cli.
time = { workspace = true }
# `ExperimentReport`/`VariantStats` (Fase 7 Onda 9, A2) — o handler de
# `/api/experiment/:nome` constrói os dois diretamente, não só nos testes
# (por isso é dependência real, não de dev — diferente do uso de
# `btv_schemas::ledger::LedgerEntry` nos testes, que só semeia fixtures).
btv-schemas.workspace = true

# Endpoint de carga (Fase 6 Onda 8b): o alvo HTTP do load-test do k6. Não é
# produto — é o análogo do fixture MCP, mas para medir o P95 do gateway.
[[bin]]
name = "loadgen"
path = "src/bin/loadgen.rs"

[dev-dependencies]
tempfile.workspace = true
btv-golden.workspace = true
