[package]
name = "btv-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cliente e supervisor do sidecar Python (gRPC sobre UDS) — Fase 3"

[dependencies]
btv-proto.workspace = true
tonic.workspace = true
tower.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
btv-tools.workspace = true
btv-core.workspace = true
btv-store.workspace = true
btv-schemas.workspace = true
serde_json.workspace = true
