[package]
name = "btv-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage SQLite da plataforma BuildToValue: sessões, ledger append-only, telemetria"

[dependencies]
btv-schemas.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
