[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime de sessão da plataforma Forge: contexto, agentes, permissões"

[dependencies]
forge-schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
