[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime de sessão da plataforma Forge: contexto, agentes, permissões, loop de agente"

[dependencies]
forge-schemas.workspace = true
forge-llm.workspace = true
forge-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
