[package]
name = "forge-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage SQLite da plataforma Forge: sessões, ledger append-only, telemetria"

[dependencies]
forge-schemas.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
