[package]
name = "forge-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferramentas determinísticas da plataforma Forge: read, grep, edit, bash"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ignore.workspace = true
grep.workspace = true

[dev-dependencies]
tempfile.workspace = true
