[package]
name = "forge-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pipeline de verificação determinística da plataforma Forge (/verify + skill-vetter)"

[dependencies]
forge-schemas.workspace = true
serde_json.workspace = true
thiserror.workspace = true
